--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -14,8 +14,6 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-
 
 </head>
 
@@ -62,50 +60,49 @@
     </nav>
   </header>
   <div class="container-fluid">
-    <div class="">
-      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="img_event1">
-            </div>
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize text-warning">home</p>
-            </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="img_event1">
           </div>
-          <div class="carousel-item">
-            <div class="img_event2">
-
-            </div>
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="img_event3">
-
-            </div>
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
-            </div>
+          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+            <p class="display-1 fw-bolder text-capitalize text-warning">home</p>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Siguiente</span>
-        </a>
+        <div class="carousel-item">
+          <div class="img_event2">
+
+          </div>
+          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+            <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="img_event3">
+
+          </div>
+          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+            <p class="display-1 fw-bolder text-capitalize text-warning ">home</p>
+          </div>
+        </div>
       </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </a>
     </div>
   </div>
-  <div class="">
+
+  <div>
     <div class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <div class="collapse navbar-collapse container-category" id="navbarSupportedContent2">
@@ -144,109 +141,40 @@
     </div>
   </div>
 
-  <!-- Swiper -->
-  <!-- Swiper -->
-  <div class="container">
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-container mySwiper">
 
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="row">
-            <div class="col-lg-12 col-sm-12">
-              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
-              <div class="card-description">
-                <div class="card-title">
-                  <h4>Descripción</h4>
+  <div class="container-fluid">
+    <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-3 col-sm-6">
+                <div class="card p-3">
+                  <img src="../assets/images/eventos_ejecutivos.jpg" class="w-100 h-100"  alt="">
                 </div>
-                <div class="card-text">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
-                    modi
-                    sunt ips.</p>
-                </div>
-                <div class="card-link">
-                  <a href="#">Ver más</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="row">
-            <div class="col-lg-12 col-sm-12">
-              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
-              <div class="card-description">
-                <div class="card-title">
-                  <h4>Descripción</h4>
-                </div>
-                <div class="card-text">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
-                    modi
-                    sunt ips.</p>
-                </div>
-                <div class="card-link">
-                  <a href="#">Ver más</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="row">
-            <div class="col-lg-12 col-sm-12">
-              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
-              <div class="card-description">
-                <div class="card-title">
-                  <h4>Descripción</h4>
-                </div>
-                <div class="card-text">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
-                    modi
-                    sunt ips.</p>
-                </div>
-                <div class="card-link">
-                  <a href="#">Ver más</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="row">
-            <div class="col-lg-12 col-sm-12">
-              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
-              <div class="card-description">
-                <div class="card-title">
-                  <h4>Descripción</h4>
-                </div>
-                <div class="card-text">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
-                    modi
-                    sunt ips.</p>
-                </div>
-                <div class="card-link">
-                  <a href="#">Ver más</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="row">
-            <div class="col-lg-12 col-sm-12">
-              <img src="../assets/images/eventos_ejecutivos.jpg" alt="">
-              <div class="card-description">
-                <div class="card-title">
-                  <h4>Descripción</h4>
-                </div>
-                <div class="card-text">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum enim possimus dolorum non,
-                    modi
-                    sunt ips.</p>
-                </div>
-                <div class="card-link">
-                  <a href="#">Ver más</a>
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    <div class="card-text text-center">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus, veniam laudantium vero
+                      neque ab totam ipsum corporis odit placeat necessitatibus! Itaque amet aliquid ipsam dolor aliquam
+                      at dignissimos assumenda.
+                      Est vitae ratione rerum nihil, ullam inventore fugit! Quasi praesentium ipsam quisquam et rerum
+                      velit. Reiciendis saepe, beatae fuga expedita eum cumque deleniti, animi sint, voluptas cupiditate
+                      nostrum illum ipsa.
+                      Ipsum porro unde ab reprehenderit corporis fugiat aliquam dolorem libero praesentium! Dolor
+                      reprehenderit laborum eius molestiae quos saepe neque accusamus iusto modi architecto voluptatem,
+                      ex ipsa quam. Perferendis, corrupti asperiores!
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <p class="card-text"> <small class="text-muted">Price $500</small></p>
+                      <a href="./details.html" class="btn btn-primnary float-right">View Details</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -254,7 +182,17 @@
         </div>
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Siguiente</span>
+    </a>
   </div>
+  </div>
+
 
   <br>
   <footer class="footer bg-light text-center text-white">
@@ -304,7 +242,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
   <script src="../lib/Js-page1.js" type="text/javascript"></script>
 </body>
 
