--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -56,42 +56,50 @@
             </div>
           </nav>
     </header>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../assets/images/eventos ejecutivos.jpg" class="d-table" alt="Imagen 1">
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+    <div class="container-fluid">
+      <div class="">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" >
+            <div class="carousel-item active">
+              <div class="img_event10">
+              </div>
+              <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                <p class="display-1 fw-bolder text-capitalize text-warning">stats</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="img_event11">
+  
+              </div>
+              <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                <p class="display-1 fw-bolder text-capitalize text-warning ">stats</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="img_event12">
+  
+              </div>
+              <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                <p class="display-1 fw-bolder text-capitalize text-warning ">stats</p>
+              </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="../assets/images/eventos musicales.jpg" class="d-table" alt="Imagen 2">
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/images/eventos para bodas.jpg" class="d-table" alt="Imagen 3">
-            <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
-            </div>
-          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Siguiente</span>
-        </a>
       </div>
-      <div>
+    </div>
     <div class="container mt-3 mb-2">
         <div class="row">
             <div class="col-md-1"></div>
@@ -221,53 +229,49 @@
 
         </div>
     </div>
+    <footer class="footer bg-light text-center text-white">
+      <!-- Grid container -->
+      <div class="p-12 pb-0" class="container1">
+        <!-- Section: Social media -->
+        <div class="mb-4 bg-secondary bg-opacity-75">
+          <div class="text-start p-3 text-white">
+            <div>
+              <!-- Facebook -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
+                href="https://es-la.facebook.com/" role="button"><i class="bi bi-facebook"></i>
+              </a>
 
+              <!-- Twitter -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #55acee"
+                href="https://twitter.com/?lang=es" role="button"><i class="bi bi-twitter"></i>
+              </a>
 
-    <footer class="bg-light text-center text-white">
-        <!-- Grid container -->
-        <div class="container p-12 pb-0">
-            <!-- Section: Social media -->
-            <div class="mb-4 bg-secondary bg-opacity-75">
-                <div class="text-start p-3 text-white">
-                    <div>
-                        <!-- Facebook -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
-                            role="button"><i class="bi bi-facebook"></i>
-                        </a>
+              <!-- Google -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39"
+                href="https://www.google.com/?hl=es" role="button"><i class="bi bi-google"></i>
+              </a>
 
-                        <!-- Twitter -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!"
-                            role="button"><i class="bi bi-twitter"></i>
-                        </a>
+              <!-- Instagram -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
+                href="https://www.instagram.com/" role="button"><i class="bi bi-instagram"></i>
+              </a>
 
-                        <!-- Google -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!"
-                            role="button"><i class="bi bi-google"></i>
-                        </a>
+              <!-- Linkedin -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #0082ca"
+                href="https://co.linkedin.com/" role="button"><i class="bi bi-linkedin"></i>
+              </a>
 
-                        <!-- Instagram -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!"
-                            role="button"><i class="bi bi-instagram"></i>
-                        </a>
-
-                        <!-- Linkedin -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!"
-                            role="button"><i class="bi bi-linkedin"></i>
-                        </a>
-
-                        <!-- Github -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!"
-                            role="button"><i class="bi bi-github"></i>
-                        </a>
-                    </div>
-                    © 2023
-                </div>
+              <!-- Github -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/"
+                role="button"><i class="bi bi-github"></i>
+              </a>
             </div>
-            <!-- Section: Social media -->
-
-
-
+            © 2023
+          </div>
         </div>
+        <!-- Section: Social media -->
+      </div>
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
